--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,3 +23,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\DataPersister\ProductDataPersister:
+        decorates: 'api_platform.doctrine.orm.data_persister'
