--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\DataPersister\ProductDataPersister:
+    App\DataPersister\WebsiteAwareDataPersister:
         decorates: 'api_platform.doctrine.orm.data_persister'
