Add constraints validations for Product 🧳

--- a/config/validator/validation.yaml
+++ b/config/validator/validation.yaml
@@ -11,3 +11,12 @@ App\Entity\Rating:
       - NotNull: ~
     votes:
       - NotNull: ~
+App\Entity\Product:
+  properties:
+    reference:
+      - NotNull: ~
+    website:
+      - NotNull: ~
+    ratings:
+      - NotNull: ~
+
