WIP api compartementlization

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,7 @@ services:
     # please note that last definitions always *replace* previous ones
     App\DataPersister\WebsiteAwareDataPersister:
         decorates: 'api_platform.doctrine.orm.data_persister'
+    App\DataProvider\WebsiteAwareItemDataProvider:
+        decorates: 'api_platform.doctrine.orm.item_data_provider'
+    App\DataProvider\WebsiteAwareCollectionDataProvider:
+        decorates: 'api_platform.collection_data_provider'
