Fixes bugs created by rebase

--- a/config/validator/validation.yaml
+++ b/config/validator/validation.yaml
@@ -4,7 +4,7 @@ App\Entity\Rating:
       - LessThan: {value: 5, message: The mark must be less than 5}
       - Type: {type: float, message: The mark must be a Float}
       - NotNull: ~
-    authorUserMail:
+    authorUserEmail:
       - Email: {message: The email is not a valid email.}
       - NotNull: ~
     product:
