--- a/fixtures/websites.yaml
+++ b/fixtures/websites.yaml
@@ -1,4 +1,7 @@
 App\Entity\Website:
-  website_{1..3}:
+  website_1:
+    domain: <url()>
+    token: 1976d16a487d446b86a0f7b0cb199291
+  website_{2..3}:
     domain: <url()>
     token: <uuid()>
